--- a/lrp.html
+++ b/lrp.html
@@ -49,7 +49,7 @@
 
       OrgChart.templates.green = Object.assign({}, OrgChart.templates.root);
       OrgChart.templates.green.size = [150, 80];
-      OrgChart.templates.green.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 30px;" font-weight="bold" fill="#1d4355" x="75" y="50" text-anchor="middle">{val}</text>';
+      OrgChart.templates.green.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="75" y="50" text-anchor="middle">{val}</text>';
 
       OrgChart.templates.arrowGreen = Object.assign({}, OrgChart.templates.green);
       OrgChart.templates.arrowGreen.size = [170, 80];
@@ -57,17 +57,19 @@
         '<rect x="0" y="0" height="{h}" width="{w}" fill="#41c1ba" stroke-width="0.5" stroke="#41c1ba"></rect>'
         + '<path fill="#41c1ba"stroke="#41c1ba" d="M85 120 L0 80 L170 80 Z" />';
       OrgChart.templates.arrowGreen.link = '';
-      OrgChart.templates.arrowGreen.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 30px;" font-weight="bold" fill="#1d4355" x="85" y="50" text-anchor="middle">{val}</text>';
+      OrgChart.templates.arrowGreen.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="85" y="50" text-anchor="middle">{val}</text>';
 
 
       OrgChart.templates.smallGreen = Object.assign({}, OrgChart.templates.green);
-      OrgChart.templates.smallGreen.size = [130, 60];
-      OrgChart.templates.smallGreen.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 30px;" font-weight="bold" fill="#1d4355" x="65" y="40" text-anchor="middle">{val}</text>';
+      OrgChart.templates.smallGreen.size = [120, 60];
+      OrgChart.templates.smallGreen.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="60" y="40" text-anchor="middle">{val}</text>';
 
       OrgChart.templates.ebit = Object.assign({}, OrgChart.templates.green);
       OrgChart.templates.ebit.size = [170, 80];
       OrgChart.templates.ebit.node =
         '<rect x="10" y="0" height="{h}" width="150" fill="#41c1ba" rx="12" ry="12"></rect>';
+      OrgChart.templates.ebit.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="85" y="50" text-anchor="middle">{val}</text>';
+
       OrgChart.templates.ebit.linkAdjuster = {
         fromX: 10,
         fromY: 0,
@@ -108,7 +110,7 @@
         { id: 1, text: "A- Robust Profitable", tags: ["root"] },
         { id: 2, pid: 1, text: "Turnover", tags: ["green"] },
         { id: 5, pid: 2, text: "100 CR", tags: ['partner', 'smallGreen'] },
-        { id: 6, pid: 2, text: "Turnover", tags: ['partner', 'arrowGreen'] },
+        { id: 6, pid: 2, text: "2022-2023", tags: ['partner', 'arrowGreen'] },
         { id: 3, pid: 1, text: "EBIT", tags: ["ebit"] },
         { id: 4, pid: 1, tags: ["hidden"] },
       ];
