--- a/lrp.html
+++ b/lrp.html
@@ -22,6 +22,18 @@
       width: 100%;
       height: 100%;
     }
+
+    [data-n-id='7'] rect,
+    [data-n-id='8'] rect,
+    [data-n-id='9'] rect,
+    [data-n-id='9'] path,
+    [data-n-id='10'] rect
+    
+    {
+        stroke: #cb6ce6;
+        fill: #cb6ce6;
+    }
+
   </style>
 
 </head>
@@ -47,24 +59,24 @@
       OrgChart.templates.hidden.size = [0, 0];
       OrgChart.templates.hidden.link = '';
 
-      OrgChart.templates.green = Object.assign({}, OrgChart.templates.root);
-      OrgChart.templates.green.size = [150, 80];
-      OrgChart.templates.green.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="75" y="50" text-anchor="middle">{val}</text>';
+      OrgChart.templates.main = Object.assign({}, OrgChart.templates.root);
+      OrgChart.templates.main.size = [150, 80];
+      OrgChart.templates.main.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="75" y="50" text-anchor="middle">{val}</text>';
 
-      OrgChart.templates.arrowGreen = Object.assign({}, OrgChart.templates.green);
-      OrgChart.templates.arrowGreen.size = [170, 80];
-      OrgChart.templates.arrowGreen.node =
+      OrgChart.templates.sarrow = Object.assign({}, OrgChart.templates.main);
+      OrgChart.templates.sarrow.size = [170, 80];
+      OrgChart.templates.sarrow.node =
         '<rect x="0" y="0" height="{h}" width="{w}" fill="#41c1ba" stroke-width="0.5" stroke="#41c1ba"></rect>'
         + '<path fill="#41c1ba"stroke="#41c1ba" d="M85 120 L0 80 L170 80 Z" />';
-      OrgChart.templates.arrowGreen.link = '';
-      OrgChart.templates.arrowGreen.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="85" y="50" text-anchor="middle">{val}</text>';
+      OrgChart.templates.sarrow.link = '';
+      OrgChart.templates.sarrow.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="85" y="50" text-anchor="middle">{val}</text>';
 
 
-      OrgChart.templates.smallGreen = Object.assign({}, OrgChart.templates.green);
-      OrgChart.templates.smallGreen.size = [120, 60];
-      OrgChart.templates.smallGreen.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="60" y="40" text-anchor="middle">{val}</text>';
+      OrgChart.templates.small = Object.assign({}, OrgChart.templates.main);
+      OrgChart.templates.small.size = [120, 60];
+      OrgChart.templates.small.field_0 = '<text data-width="230" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="60" y="40" text-anchor="middle">{val}</text>';
 
-      OrgChart.templates.ebit = Object.assign({}, OrgChart.templates.green);
+      OrgChart.templates.ebit = Object.assign({}, OrgChart.templates.main);
       OrgChart.templates.ebit.size = [170, 80];
       OrgChart.templates.ebit.node =
         '<rect x="10" y="0" height="{h}" width="150" fill="#41c1ba" rx="12" ry="12"></rect>';
@@ -74,6 +86,15 @@
         fromX: 10,
         fromY: 0,
         toX: 0,
+        toY: 0
+      }
+
+      OrgChart.templates.ebitNext = Object.assign({}, OrgChart.templates.ebit);
+      OrgChart.templates.ebitNext.link = '<path stroke-dasharray="8, 4" stroke-linejoin="round" stroke="grey" stroke-width="3px" fill="none" d="M{xa},{ya} {xb},{yb} {xc},{yc} L{xd},{yd}" />';
+      OrgChart.templates.ebitNext.linkAdjuster = {
+        fromX: 10,
+        fromY: 0,
+        toX: -10,
         toY: 0
       }
 
@@ -91,27 +112,37 @@
           hidden: {
             template: "hidden"
           },
-          green: {
-            template: "green"
+          main: {
+            template: "main"
           },
-          arrowGreen: {
-            template: "arrowGreen"
+          sarrow: {
+            template: "sarrow"
           },
-          smallGreen: {
-            template: "smallGreen"
+          small: {
+            template: "small"
           },
           ebit: {
             template: "ebit"
+          },
+          ebitNext: {
+            template: "ebitNext"
           }
         }
       });
 
       nodes = [
         { id: 1, text: "A- Robust Profitable", tags: ["root"] },
-        { id: 2, pid: 1, text: "Turnover", tags: ["green"] },
-        { id: 5, pid: 2, text: "100 CR", tags: ['partner', 'smallGreen'] },
-        { id: 6, pid: 2, text: "2022-2023", tags: ['partner', 'arrowGreen'] },
+
+        { id: 2, pid: 1, text: "Turnover", tags: ["main"] },
+        { id: 5, pid: 2, text: "100 CR", tags: ['partner', 'small'] },
+        { id: 6, pid: 2, text: "2022-2023", tags: ['partner', 'sarrow'] },
+
+        { id: 7, pid: 2, text: "Turnover", tags: ["main"] },
+        { id: 8, pid: 7, text: "100 CR", tags: ['partner', 'small'] },
+        { id: 9, pid: 7, text: "2022-2023", tags: ['partner', 'sarrow'] },
+
         { id: 3, pid: 1, text: "EBIT", tags: ["ebit"] },
+        { id: 10, pid: 3, text: "EBIT", tags: ["ebitNext"] },
         { id: 4, pid: 1, tags: ["hidden"] },
       ];
       chart.load(nodes);
