--- a/lrp.html
+++ b/lrp.html
@@ -34,12 +34,20 @@
     }
     [data-l-id="[2][7]"] path,
     [data-l-id="[3][10]"] path,
-    [data-l-id="[7][12]"] path {
+    [data-l-id="[7][12]"] path,
+    [data-l-id="[11][15]"] path,
+    [data-l-id="[10][16]"] path {
       stroke-dasharray: 8, 4;
       stroke-width: 3px;
     }
 
-    [data-n-id='12'] rect {
+    [data-n-id='12'] rect, 
+    [data-n-id='13'] rect, 
+    [data-n-id='14'] path, 
+    [data-n-id='14'] rect,
+    [data-n-id='15'] rect,
+    [data-n-id='16'] rect  {
+      stroke: #ff5757;
       fill: #ff5757;
     }
 
@@ -59,7 +67,7 @@
       OrgChart.templates.root.size = [200, 200];
       OrgChart.templates.root.node =
         '<rect x="0" y="0" height="{h}" width="{w}" fill="#41c1ba" rx="12" ry="12"></rect>';
-      OrgChart.templates.root.field_0 = '<text data-width="180" data-text-overflow="multiline" style="font-size: 30px;" font-weight="bold" fill="#1d4355" x="100" y="90" text-anchor="middle">{val}</text>';
+      OrgChart.templates.root.field_0 = '<text data-width="180" data-text-overflow="multiline" style="font-size: 30px;" font-weight="bold" fill="#1d4355" x="100" y="95" text-anchor="middle">{val}</text>';
       OrgChart.templates.root.link = '<path stroke-linejoin="round" stroke="#365b6d" stroke-width="2px" fill="none" d="{edge}" />';
       OrgChart.templates.root.plus = '';
       OrgChart.templates.root.minus = '';
@@ -109,7 +117,7 @@
 
       OrgChart.templates.ebitNextTO = Object.assign({}, OrgChart.templates.ebitNext);
 
-      OrgChart.templates.ebitNextTO.field_0 = '<text data-width="150" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="85" y="30" text-anchor="middle">{val}</text>';
+      OrgChart.templates.ebitNextTO.field_0 = '<text data-width="150" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="85" y="35" text-anchor="middle">{val}</text>';
 
       var chart = new OrgChart(document.getElementById("tree"), {
         orientation: OrgChart.orientation.left,
@@ -154,17 +162,20 @@
         { id: 6, pid: 2, text: "2022-2023", tags: ['partner', 'sarrow'] },
 
         { id: 7, pid: 2, text: "Turnover", tags: ["main"] },
-        { id: 8, pid: 7, text: "100 CR", tags: ['partner', 'small'] },
-        { id: 9, pid: 7, text: "2022-2023", tags: ['partner', 'sarrow'] },
+        { id: 8, pid: 7, text: "150 CR", tags: ['partner', 'small'] },
+        { id: 9, pid: 7, text: "2023-2024", tags: ['partner', 'sarrow'] },
 
         { id: 3, pid: 1, text: "EBIT", tags: ["ebit"] },
         { id: 10, pid: 3, text: "EBIT", tags: ["ebitNext"] },
+        { id: 16, pid: 10, text: "EBIT", tags: ["ebitNext"] },
 
         { id: 12, pid: 7, text: "Turnover", tags: ["main"] },
-
+        { id: 13, pid: 12, text: "200 CR", tags: ['partner', 'small'] },
+        { id: 14, pid: 12, text: "2024-2025", tags: ['partner', 'sarrow'] },
 
         { id: 4, pid: 1, tags: ["hidden"] },
         { id: 11, pid: 4, text: "T/O of Export", tags: ["ebitNextTO"] },
+        { id: 15, pid: 11, text: "T/O of Export", tags: ["ebitNextTO"] },
       ];
       chart.load(nodes);
     }
