--- a/lrp.html
+++ b/lrp.html
@@ -18,9 +18,9 @@
       font-family: Helvetica;
     }
 
-    #tree {
-      width: 100%;
-      height: 100%;
+    #tree1, #tree2, #tree3, #tree4 {
+      width: 50%;
+      height: 50%;
     }
 
     [data-n-id='7'] rect,
@@ -58,7 +58,10 @@
 <body>
 
 
-  <div id="tree" />
+  <div id="tree1"></div>
+  <div id="tree2"></div>
+  <div id="tree3"></div>
+  <div id="tree4"></div>
 
   <script>
     window.onload = function () {
@@ -119,8 +122,34 @@
 
       OrgChart.templates.ebitNextTO.field_0 = '<text data-width="150" data-text-overflow="multiline" style="font-size: 24px;" font-weight="bold" fill="#1d4355" x="85" y="35" text-anchor="middle">{val}</text>';
 
-      var chart = new OrgChart(document.getElementById("tree"), {
+      nodes = [
+        { id: 1, text: "A- Robust Profitable", tags: ["root"] },
+
+        { id: 2, pid: 1, text: "Turnover", tags: ["main"] },
+        { id: 5, pid: 2, text: "100 CR", tags: ['partner', 'small'] },
+        { id: 6, pid: 2, text: "2022-2023", tags: ['partner', 'sarrow'] },
+
+        { id: 7, pid: 2, text: "Turnover", tags: ["main"] },
+        { id: 8, pid: 7, text: "150 CR", tags: ['partner', 'small'] },
+        { id: 9, pid: 7, text: "2023-2024", tags: ['partner', 'sarrow'] },
+
+        { id: 3, pid: 1, text: "EBIT", tags: ["ebit"] },
+        { id: 10, pid: 3, text: "EBIT", tags: ["ebitNext"] },
+        { id: 16, pid: 10, text: "EBIT", tags: ["ebitNext"] },
+
+        { id: 12, pid: 7, text: "Turnover", tags: ["main"] },
+        { id: 13, pid: 12, text: "200 CR", tags: ['partner', 'small'] },
+        { id: 14, pid: 12, text: "2024-2025", tags: ['partner', 'sarrow'] },
+
+        { id: 4, pid: 1, tags: ["hidden"] },
+        { id: 11, pid: 4, text: "T/O of Export", tags: ["ebitNextTO"] },
+        { id: 15, pid: 11, text: "T/O of Export", tags: ["ebitNextTO"] },
+      ];
+
+      var chart1 = new OrgChart(document.getElementById("tree1"), {
         orientation: OrgChart.orientation.left,
+        
+        enableSearch: false,
         enableDragDrop: true,
         nodeBinding: {
           field_0: "text"
@@ -154,30 +183,46 @@
         }
       });
 
-      nodes = [
-        { id: 1, text: "A- Robust Profitable", tags: ["root"] },
 
-        { id: 2, pid: 1, text: "Turnover", tags: ["main"] },
-        { id: 5, pid: 2, text: "100 CR", tags: ['partner', 'small'] },
-        { id: 6, pid: 2, text: "2022-2023", tags: ['partner', 'sarrow'] },
+      chart1.load(nodes);
 
-        { id: 7, pid: 2, text: "Turnover", tags: ["main"] },
-        { id: 8, pid: 7, text: "150 CR", tags: ['partner', 'small'] },
-        { id: 9, pid: 7, text: "2023-2024", tags: ['partner', 'sarrow'] },
+      var chart2 = new OrgChart(document.getElementById("tree2"), {
+        orientation: OrgChart.orientation.left,
+        enableDragDrop: true,
+        enableSearch: false,
+        nodeBinding: {
+          field_0: "text"
+        },
 
-        { id: 3, pid: 1, text: "EBIT", tags: ["ebit"] },
-        { id: 10, pid: 3, text: "EBIT", tags: ["ebitNext"] },
-        { id: 16, pid: 10, text: "EBIT", tags: ["ebitNext"] },
+        tags: {
+          root: {
+            template: "root"
+          },
+          hidden: {
+            template: "hidden"
+          },
+          main: {
+            template: "main"
+          },
+          sarrow: {
+            template: "sarrow"
+          },
+          small: {
+            template: "small"
+          },
+          ebit: {
+            template: "ebit"
+          },
+          ebitNext: {
+            template: "ebitNext"
+          },
+          ebitNextTO: {
+            template: "ebitNextTO"
+          },
+        }
+      });
 
-        { id: 12, pid: 7, text: "Turnover", tags: ["main"] },
-        { id: 13, pid: 12, text: "200 CR", tags: ['partner', 'small'] },
-        { id: 14, pid: 12, text: "2024-2025", tags: ['partner', 'sarrow'] },
-
-        { id: 4, pid: 1, tags: ["hidden"] },
-        { id: 11, pid: 4, text: "T/O of Export", tags: ["ebitNextTO"] },
-        { id: 15, pid: 11, text: "T/O of Export", tags: ["ebitNextTO"] },
-      ];
-      chart.load(nodes);
+      chart2.load(nodes);
     }
 
   </script>
