--- a/lrp.html
+++ b/lrp.html
@@ -124,6 +124,7 @@
       OrgChart.templates.numbers = Object.assign({}, OrgChart.templates.main);
       OrgChart.templates.numbers.node = 
       '<rect x="0" y="0" height="{h}" width="100" fill="#41c1ba" fill-opacity="0" stroke-width="0", rx="12" ry="12"></rect>';
+      OrgChart.templates.numbers.link = "";
 
       nodes = [
         { id: 1, text: "A- Robust Profitable", tags: ["root"] },
