--- a/lrp.html
+++ b/lrp.html
@@ -54,6 +54,12 @@
     #tree2 [data-n-id='6'] tspan {
       fill: #41c1ba;
     }
+    #tree2 [data-n-id='9'] tspan {
+      fill: #cb6ce6;
+    }
+    #tree2 [data-n-id='14'] tspan {
+      fill: #ff5757;
+    }
 
   </style>
 
