--- a/lrp.html
+++ b/lrp.html
@@ -269,7 +269,7 @@
             template: "root"
           },
           hidden: {
-            template: "hidden"
+            template: "hiddenPartner"
           },
           main: {
             template: "arrows"
