--- a/lrp.html
+++ b/lrp.html
@@ -29,7 +29,10 @@
     [data-n-id='9'] rect,
     [data-n-id='9'] path,
     [data-n-id='10'] rect,
-    [data-n-id='11'] rect {
+    [data-n-id='11'] rect,
+    [data-n-id='7'] path,
+    [data-n-id='10'] path,
+    [data-n-id='11'] path {
         stroke: #cb6ce6;
         fill: #cb6ce6;
     }
@@ -47,7 +50,10 @@
     [data-n-id='14'] path, 
     [data-n-id='14'] rect,
     [data-n-id='15'] rect,
-    [data-n-id='16'] rect  {
+    [data-n-id='16'] rect,  
+    [data-n-id='12'] path,  
+    [data-n-id='15'] path,  
+    [data-n-id='16'] path {
       stroke: #ff5757;
       fill: #ff5757;
     }
