--- a/lrp.html
+++ b/lrp.html
@@ -58,13 +58,16 @@
       fill: #ff5757;
     }
 
-    #tree2 [data-n-id='6'] tspan {
+    #tree2 [data-n-id='6'] tspan,
+    #tree3 [data-n-id='6'] tspan {
       fill: #41c1ba;
     }
-    #tree2 [data-n-id='9'] tspan {
+    #tree2 [data-n-id='9'] tspan,
+    #tree3 [data-n-id='9'] tspan {
       fill: #cb6ce6;
     }
-    #tree2 [data-n-id='14'] tspan {
+    #tree2 [data-n-id='14'] tspan, 
+    #tree3 [data-n-id='14'] tspan {
       fill: #ff5757;
     }
 
