--- a/lrp.html
+++ b/lrp.html
@@ -63,21 +63,29 @@
       fill: #41c1ba;
     }
     #tree2 [data-n-id='9'] tspan,
-    #tree3 [data-n-id='9'] tspan {
+    #tree3 [data-n-id='9'] tspan, 
+    #tree4 [data-n-id='9'] tspan {
       fill: #cb6ce6;
     }
     #tree2 [data-n-id='14'] tspan, 
-    #tree3 [data-n-id='14'] tspan {
+    #tree3 [data-n-id='14'] tspan, 
+    #tree4 [data-n-id='14'] tspan {
       fill: #ff5757;
     }
 
     #tree3 [data-n-id="11"] text:nth-of-type(1) tspan:nth-of-type(1),
     #tree3 [data-n-id="11"] text:nth-of-type(1) tspan:nth-of-type(2),
     #tree3 [data-n-id="15"] text:nth-of-type(1) tspan:nth-of-type(1),
-    #tree3 [data-n-id="15"] text:nth-of-type(1) tspan:nth-of-type(2) {
+    #tree3 [data-n-id="15"] text:nth-of-type(1) tspan:nth-of-type(2),
+    #tree4 [data-n-id="4"] text:nth-of-type(1) tspan:nth-of-type(1),
+    #tree4 [data-n-id="4"] text:nth-of-type(1) tspan:nth-of-type(2)
+    {
      baseline-shift: 10px;
     }
 
+    #tree4 [data-n-id='6'] tspan {
+      display: none;
+    }
   </style>
 
 </head>
@@ -184,7 +192,7 @@
         { id: 13, pid: 12, text: "200 CR", tags: ['partner', 'small'] },
         { id: 14, pid: 12, text: "2024-2025", tags: ['partner', 'years'] },
 
-        { id: 4, pid: 1, tags: ["hidden"] },
+        { id: 4, pid: 1, text: "T/O of Export", tags: ["hidden"] },
         { id: 11, pid: 4, text: "T/O of Export", tags: ["ebitNextTO"] },
         { id: 15, pid: 11, text: "T/O of Export", tags: ["ebitNextTO"] },
       ];
@@ -309,6 +317,46 @@
       });
 
       chart3.load(nodes);
+
+      var chart4 = new OrgChart(document.getElementById("tree4"), {
+        orientation: OrgChart.orientation.left,
+        scaleInitial: 0.5,
+        mouseScrool: OrgChart.action.none,
+        enableDragDrop: true,
+        enableSearch: false,
+        nodeBinding: {
+          field_0: "text"
+        },
+
+        tags: {
+          root: {
+            template: "root"
+          },
+          hidden: {
+            template: "main"
+          },
+          main: {
+            template: "main"
+          },
+          years: {
+            template: "numbers"
+          },
+          small: {
+            template: "hiddenPartner"
+          },
+          ebit: {
+            template: "main"
+          },
+          ebitNext: {
+            template: "arrows"
+          },
+          ebitNextTO: {
+            template: "arrows"
+          },
+        }
+      });
+
+      chart4.load(nodes);
   </script>
 </body>
 
