--- a/lrp.html
+++ b/lrp.html
@@ -328,8 +328,8 @@
       OrgChart.templates.circle.minus = "";
 
       OrgChart.templates.circle.ok = 
-        '<line x1="70" y1="30" x2="90" y2="45" style="stroke:rgb(255,0,0);stroke-width:2" />'
-        + '<line x1="90" y1="45" x2="180" y2="25" style="stroke:rgb(255,0,0);stroke-width:2" />';
+        '<line x1="70" y1="30" x2="95" y2="55" style="stroke:#008037;stroke-width:2" />'
+        + '<line x1="95" y1="55" x2="175" y2="15" style="stroke:#008037;stroke-width:2" />';
       
       nodes = [
         { id: 1, text: "A- Robust Profitable", tags: ["root"] },
