--- a/lrp.html
+++ b/lrp.html
@@ -328,8 +328,8 @@
       OrgChart.templates.circle.minus = "";
 
       OrgChart.templates.circle.ok = 
-        '<line x1="70" y1="30" x2="95" y2="55" style="stroke:#008037;stroke-width:2" />'
-        + '<line x1="95" y1="55" x2="175" y2="15" style="stroke:#008037;stroke-width:2" />';
+        '<line x1="70" y1="30" x2="95" y2="55" style="stroke:#008037;stroke-width:5" />'
+        + '<line x1="95" y1="55" x2="175" y2="15" style="stroke:#008037;stroke-width:5" />';
       
       nodes = [
         { id: 1, text: "A- Robust Profitable", tags: ["root"] },
@@ -343,16 +343,16 @@
         { id: 9, pid: 7, text: "2023-2024", tags: ['partner', 'years'] },
 
         { id: 3, pid: 1, text: "EBIT", tags: ["ebit"] },
-        { id: 10, pid: 3, text: "EBIT", tags: ["circle"] },
-        { id: 16, pid: 10, text: "EBIT", tags: ["circle"] },
+        { id: 10, pid: 3, text: "EBIT", tags: ["circle"], ok: "ok" },
+        { id: 16, pid: 10, text: "EBIT", tags: ["circle"], ok: "ok" },
 
-        { id: 12, pid: 7, text: "Turnover", tags: ["circle"] },
+        { id: 12, pid: 7, text: "Turnover", tags: ["circle"], ok: "ok" },
         { id: 13, pid: 12, text: "200 CR", tags: ['partner', 'small'] },
         { id: 14, pid: 12, text: "2024-2025", tags: ['partner', 'years'] },
 
         { id: 4, pid: 1, text: "T/O of Export", tags: ["hidden"] },
         { id: 11, pid: 4, text: "T/O of Export", tags: ["circle"] },
-        { id: 15, pid: 11, text: "T/O of Export", tags: ["circle"] },
+        { id: 15, pid: 11, text: "T/O of Export", tags: ["circle"], ok: "ok" },
       ];
 
 
