--- a/lrp.html
+++ b/lrp.html
@@ -73,6 +73,13 @@
       fill: #ff5757;
     }
 
+    #tree4 [data-n-id='12'] circle, 
+    #tree4 [data-n-id='15'] circle, 
+    #tree4 [data-n-id='16'] circle {
+      stroke: #cb6ce6;
+    }
+      
+
     #tree3 [data-n-id="11"] text:nth-of-type(1) tspan:nth-of-type(1),
     #tree3 [data-n-id="11"] text:nth-of-type(1) tspan:nth-of-type(2),
     #tree3 [data-n-id="15"] text:nth-of-type(1) tspan:nth-of-type(1),
